--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="img/profile-pic.jpg" alt="Anamul Hasan" />
+                        <!-- <img src="img/profile-pic.jpg" alt="Anamul Hasan" /> -->
                     </div>
 
                     <div class="col-md-12">
@@ -85,7 +85,7 @@
                         <h3><strong>Name:</strong> Vignesh Murugan</h3>
                         <h4><strong>Profession:</strong> Software Engineer & Developer</h4>
                         <p>
-                            Results-driven and detail-oriented software engineer with 2.1 years of experience. Proven track record of delivering high-quality software solutions and collaborating with cross-functional teams.Seeking to contribute technical expertise and innovative problem-solving skills to dynamic development team
+                            Results-driven and detail-oriented software engineer with 2.5 years of experience. Proven track record of delivering high-quality software solutions and collaborating with cross-functional teams.Seeking to contribute technical expertise and innovative problem-solving skills to dynamic development team
                         </p>
                         <a href="#">Hire Me</a>
                     </div>
@@ -241,7 +241,7 @@
                     <div class="col-md-6">
                         <div class="contact-info">
                             <p><i class="fa fa-user"></i>Vignesh Murugan</p>
-                            <p><i class="fa fa-tag"></i>Web Developer</p>
+                            <p><i class="fa fa-tag"></i>Software Engineer</p>
                             <p><i class="fa fa-map-marker"></i>Chennai , Tamil Nadu , India</p>
                             <p><i class="fa fa-envelope"></i><a href="mailto:info@example.com">muruganvignesh774@gmail.com</a></p>
                             <p><i class="fa fa-phone"></i><a href="tel:+1234567890">+91 9087844102</a></p>
